--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Laboratorio2</string>
+    <string name="edit_message">Escriba un Mensaje</string>
+    <string name="send_message">Envíe el mensaje</string>
+    <string name="welcome_message">Mostrar el mensaje</string>
 </resources>
